# validated-relationships-service-api

./: .editorconfig  .flake8  .gitignore  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_GUIDE.md  Dockerfile  Makefile  README.md  SECURITY.md  ecs-proxies-containers.yml  manifest_template.yml  package-lock.json  package.json  pyproject.toml  test-report.xml
.dependabot/: config.yml
.github/: dependabot.yml  pull_request_template.md
azure/: azure-pr-pipeline.yml  azure-release-pipeline.yml  project.yml
docs/: DEPENDABOT_REVIEW_RUNBOOK.md  DEVELOPMENT_GUIDE.md  SECURITY.md
postman/: INT.postman_environment.json  README.md  dev-variables.json  (+7 more)
sandbox/: .dockerignore  Dockerfile  Makefile  README.md  app.js  app.py  app.spec.js  package-lock.json  package.json  pyproject.toml
sandbox/api/: app.py  constants.py  get_consent.py  get_consent_by_id.py  get_questionnaire_response.py  get_questionnaire_response_by_path_id.py  get_related_person.py  patch_consent.py  post_consent.py  post_questionnaire_response.py  related_person.py  utils.py
sandbox/api/responses/: RelatedPerson_identifier_and_patient.json  bad_request_include_param_invalid.json  internal_server_error.json  not_found.json
sandbox/api/responses/GET_Consent/: bad_request_status_param_invalid.json  multiple_relationships.json  multiple_relationships_include_both.json  multiple_relationships_include_patient.json  multiple_relationships_include_performer.json  multiple_relationships_status_active.json  multiple_relationships_status_active_include_both.json  multiple_relationships_status_active_include_patient.json  multiple_relationships_status_active_include_performer.json  no_relationships.json  single_consenting_adult_relationship.json  single_consenting_adult_relationship_include_both.json  single_consenting_adult_relationship_include_patient.json  single_consenting_adult_relationship_include_performer.json  single_mother_child_relationship.json  single_mother_child_relationship_include_patient.json  single_mother_child_relationship_include_performer.json
sandbox/api/responses/GET_RelatedPerson/: bad_request_identifier_invalid.json  bad_request_identifier_invalid_system.json  bad_request_identifier_missing.json  bad_request_identifier_not_as_expected.json  bad_request_missing_parameters.json  empty_response_9000000033.json  identifier.json  identifier_and_patient.json  identifier_and_patient_identifier.json  identifier_and_patient_identifier_include.json  identifier_and_patient_include.json  identifier_include.json  list_relationship_9000000017.json  list_relationship_include_9000000017.json  not_found.json  verify_relationship_9000000009.json  verify_relationship_9000000025.json  verify_relationship_include.json  verify_relationship_include_9000000025.json
sandbox/api/responses/POST_QuestionnaireResponse/: questionnaire_response_success.json
sandbox/api/tests/: conftest.py  test_app.py  test_get_consent.py  test_get_consent_by_id.py  test_get_questionnaire_response.py  test_get_questionnaire_response_by_path_id.py  test_get_related_person.py  test_patch_consent.py  test_post_consent.py  test_post_questionnaire_response.py  test_utils.py
(+216 files in other folders)
