[tool.poetry]
name = "validated-relationships-service-api-sandbox"
version = "1.0.0"
description = "Sandbox for the Validated Relationships Service API"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
gunicorn = "^23.0.0"
flask = "3.1.3" # Can't bump flask due to dropping support for Python 3.8
pyyaml = "^6.0.2"

[tool.poetry.dev-dependencies]
flake8 = "^7.3.0"
black = "^24.3.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
